# call-center-crewAI

./: .gitignore  .replit  README.md  SECURITY.md  call_center.db  config.py  crew_manager.py  email_service.py  env.example  init_db.py  knowledge_base.py  main.py  pyproject.toml  quick_test.py  replit.md  requirements.txt  setup_auth.py  simple_app.py  test_auth.py  test_simple.py
agents/: __init__.py  call_routing_agent.py  customer_service_agent.py  supervisor_agent.py
api/: email_routes.py  routes.py
auth/: __init__.py  auth_utils.py  dependencies.py  models.py  routes.py
database/: __init__.py  database.py  models.py
static/: dashboard.js  style.css
templates/: dashboard.html  email_manager.html  index.html  login.html
templates/emails/: chat_summary.html  follow_up.html  information_request.html
