[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.118.0",
    "crewai-tools>=0.0.1",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "openai>=1.86.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
